--- a/src/atomicDesign/molecules/Header/Header.scss
+++ b/src/atomicDesign/molecules/Header/Header.scss
@@ -1,12 +1,28 @@
 .m__header {
   display: flex;
   justify-content: space-between;
+  flex-direction: column;
   align-items: center;
   flex-wrap: wrap;
   background-color: var(--dark-background);
-  padding: 16px;
   margin: 0;
-  color: var(--white);
+  padding: 0;
+  width: 100%;
+
+  // color: var(--white);
+
+  &__logo-title {
+    padding: 16px;
+    // background-color: green;
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+    box-sizing: border-box;
+
+    h1 {
+      color: var(--white);
+    }
+  }
 
   img {
     height: 100px;
