--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,7 +1,9 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Roboto&display=swap");
 
 :root {
-  --project-font: "open sans", "HelveticaNeue", "Helvetica Neue", "Helvetica-Neue", Helvetica, Arial, sans-serif;
+  --project-font: "Roboto", sans-serif, "open sans", "HelveticaNeue", "Helvetica Neue", "Helvetica-Neue", Helvetica,
+    Arial, sans-serif;
   --code-font: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
   --secodnary-font: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
     "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
