Updated queries, added lists and implemented filters for homepage lists

--- a/src/styles/_color-palette.scss
+++ b/src/styles/_color-palette.scss
@@ -1,13 +1,13 @@
 :root {
-  --light-gray: #f0f5f9;
-  --dark-gray: #44546a;
-  --font-gray: #314455;
-  --card-boxshadow: rgba(0, 0, 0, 0.05);
-  --app-background: #3297fd;
-  --white: rgb(255, 255, 255);
-  --dark-blue: #44546a;
-  --light-blue: rgb(230, 238, 244);
-  --danger: #ce2043;
-  --dark-background: #282c34;
-  --body-background: #cfe8fc;
+	--light-gray: #f0f5f9;
+	--dark-gray: #44546a;
+	--font-gray: #314455;
+	--card-boxshadow: rgba(0, 0, 0, 0.05);
+	--app-background: #3297fd;
+	--white: rgb(255, 255, 255);
+	--dark-blue: #5d8aa8;
+	--light-blue: rgb(230, 238, 244);
+	--danger: #ce2043;
+	--dark-background: #282c34;
+	--body-background: #cfe8fc;
 }
